--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "auth-app",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,11 +8,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^3.2.4",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.19.0",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "cors": "^2.8.5",
+    "dotenv": "^8.6.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.5.1",
+    "nodemon": "^3.0.1",
+    "universal-cookie-express": "^5.0.0"
   },
-  "devDependencies": {
-    "nodemon": "^2.0.2"
-  }
+  "description": ""
 }
